fix: ensure container2 is initially invisible

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
     align-items: center;
     justify-content: center;
     background-color: #383a3d;
-    width: 50%;
+    width: 100%;
 }
 
 .subcontainer_1{
@@ -49,10 +49,12 @@ body{
     border-left: 5px solid hsl(0, 0%, 100%);
     width: 50%;
     background-color: #e8f0ed;
-    display: flex;
+
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    visibility:hidden;
+    display: none;
 }
 
 .subcontainer_2{
@@ -249,6 +251,8 @@ td{
     .container_2,.container_1{
         width: 100%;
         height: 100vh;
+        visibility: visible;
+        display: flex;
     }
     .roleta{
         width: 400px;
